--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -9,14 +9,14 @@
       ## DEBUG SETTINGS
       print_desired_load_pose: false # In the gcs background node
       print_debug_msgs: false # In the drone node
-      logging_rosbag: true #true # If true, rosbags will be saved to the dir_rosbag directory
+      logging_rosbag: false #true # If true, rosbags will be saved to the dir_rosbag directory
 
       ## LOAD SETTINGS
       load_id: 1
       load_pose_type: 'ground_truth' # quasi-static, visual, ground_truth
       evaluate: true # If you want to evaluate the tracking performance of the load
       show_markers: 2 # Show the detected markers 0 = No, 1 = Yes all, 2 = Drone 1 only # TODO: Replace with ENUM?
-      marker_edge_length: 0.08 # m
+      marker_edge_length: 0.120 #0.08 # m. Simulated marker is 80/200 = 0.4 of box face size defined in aruco_box model.sdf
 
       ## GCS SETTINGS
       auto_level: 0 # 0 = "Fully manual" - requires checks at intermediate steps, 1 = "semi-automatic" - fewer intermediate steps, 2 = "fully automatic" - turn into offboard mode for completely automatic mission
@@ -72,14 +72,14 @@
       drone_yaws_rel_load: [3.141592654, -1.0472, 1.0472] # In rad, for 3 drones, np.array([3,141592654, -np.pi*(2/self.num_drones), np.pi*(2/self.num_drones)])
 
       # Load and cable dimensions
-      cable_length: 2.2 #m
-      load_connection_point_r: 0.08 #m
+      cable_length: 2.19 #m
+      load_connection_point_r: 0.1 #m
 
       # Camera and markers/
       t_cam_rel_pixhawk: [0.1, 0.03, -0.025] # Camera translation relative to PX4 (i.e. drone body)
       R_cam_rel_pixhawk: [-2.61799387799, 0.0, -1.570796327] # Camera rotation relative to PX4 (i.e. drone body)
 
-      t_marker_rel_load: [0.0, 0.0, 0.1] # Marker translation relative to load
+      t_marker_rel_load: [0.0, 0.0, 0.03] # Marker translation relative to load
       R_marker_rel_load: [0.0, 0.0, 1.570796327] # Marker rotation relative to load
 
       ## Timings
