--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -9,7 +9,8 @@
       ## DEBUG SETTINGS
       print_desired_load_pose: false # In the gcs background node
       print_debug_msgs: false # In the drone and load nodes (can add to other nodes too). TODO: Could properly use ROS logging levels: https://docs.ros.org/en/humble/Tutorials/Demos/Logging-and-logger-configuration.html
-      run_logging_on: 'load' # If not empty, rosbags will be saved to the dir_rosbag directory on the selected device
+      run_logger_on: 'load' # If not empty, custom log data will be saved to the same directory as measurement data on the selected device
+      run_logging_on: '' #'load' # If not empty, rosbags will be saved to the dir_rosbag directory on the selected device
 
       ## LOAD SETTINGS
       load_id: 1
