--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -9,6 +9,7 @@
       ## DEBUG SETTINGS
       print_desired_load_pose: false # In the gcs background node
       print_debug_msgs: false # In the drone and load nodes
+      run_logger: true # If true, logger will save data to the same directory as the measurement data
       logging_rosbag: false #true # If true, rosbags will be saved to the dir_rosbag directory
 
       ## LOAD SETTINGS
