Offsets are now correct - load is now at desired height

--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -60,11 +60,13 @@
       height_drone_cs_rel_gnd: 0.0 #0.24 # m
       height_load_cs_rel_gnd: 0.0 #0.1 # m
       height_load_pre_tension: -1.0 #-0.4 # m
+      height_cable_attach_drone_rel_cs: 0.24 #m
+      height_cable_attach_load_rel_cs: 0.03 #m
 
       takeoff_height_load: 1.0 #m
       takeoff_height_load_max: 3.0 #m # Safety feature - maximum height load will be commanded to take off
 
-      r_drones_rel_load: 1.25 #1.5 #1.0 # m
+      r_drones_rel_load: 1.25 #1.0 # m
       d_drones_rel_min: 0.0 #0.5 #1.0 # m
       d_drones_rel_max: 100.0 #5.0 #2.0 # m
 
