--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -69,6 +69,7 @@
       # Heights/distances/dimensions
       # Formation dimensions
       height_drone_cs_rel_gnd: 0.25 #0.24 # m
+      height_cable_attach_drone_rel_cs: 0 #m
       height_load_cs_rel_gnd: 0.07 #0.1 # m
       height_load_pre_tension: -1.0 # m
 
