--- a/config/phys.yaml
+++ b/config/phys.yaml
@@ -15,6 +15,7 @@
       ## LOAD SETTINGS
       load_id: 1
       load_pose_type: 'ground_truth' #'quasi-static' # quasi-static, visual, ground_truth
+      load_pub_quasi_static_tf: true # Publish the quasi-static load pose TF regardless of what load pose type is selected (useful baseline for evaluation)
       evaluate: true # If you want to evaluate the tracking performance of the load
       show_markers: 0 # Show the detected markers 0 = No, 1 = Yes all, 2 = Drone 1 only # TODO: Replace with ENUM?
       marker_edge_length: 0.125 #0.075 # m
