--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -60,7 +60,7 @@
       # Formation dimensions
       height_drone_cs_rel_gnd: 0.0 #0.24 # m
       height_load_cs_rel_gnd: 0.0 #0.1 # m
-      height_load_pre_tension: -1.0 #-0.4 # m
+      height_load_pre_tension: -0.3 #-1.5 #-1.0 #-0.4 # m
       height_cable_attach_drone_rel_cs: 0.24 #m
       height_cable_attach_load_rel_cs: 0.03 #m
 
