--- a/package.xml
+++ b/package.xml
@@ -12,7 +12,8 @@
   <exec_depend>px4_msgs</exec_depend>
   <exec_depend>multi_drone_slung_load_interfaces</exec_depend>
   <exec_depend>ros2launch</exec_depend>
-  <exec_depend>slung_pose_estimation</exec_depend>
+  <exec_depend>slung_pose_measurement</exec_depend>
+  <!-- <exec_depend>slung_pose_estimation</exec_depend>  -->
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
