--- a/config/sim.yaml
+++ b/config/sim.yaml
@@ -44,7 +44,7 @@
       ## DRONE SETTINGS
       first_drone_num: 1 #1
       num_drones: 3
-      num_cameras: 0 # 0 if cameras are off
+      num_cameras: 0 # 0 if cameras are off. Note to turn cameras off in simulation, comment out the camera in gz/models/x500_camera_down/model.sdf. DO NOT TURN OFF DIRECTLY IN OAKDLITE as this will disrupt the ground truth
     
       drone_order: [1, 2, 3] #[1, 2, 3] #ACW from load's x axis
 
